<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingTop="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStartService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_start_service"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEndService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_end_service"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDownloadImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/lbl_download1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDownloadImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnDownloadImage1"
            android:layout_centerInParent="true"
            android:text="@string/lbl_download2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnWorkManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_work_manager"
            android:layout_below="@id/btnDownloadImage2"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>